Fix search on mobile view.

--- a/sources/stylesheets/components/_site-search.scss
+++ b/sources/stylesheets/components/_site-search.scss
@@ -110,9 +110,12 @@
 
   &,
   &.selected {
-    max-width: 400px;
     margin: 0 auto;
     border: none;
+
+    @media screen and (min-width: $tablet-3 + 1) {
+      max-width: 400px;
+    }
   }
 }
 
@@ -296,7 +299,6 @@
   box-sizing: border-box;
   z-index: 999;
   width: 100%;
-  max-width: 400px;
   max-height: 100vh;
   margin: 0 auto;
   background-color: rgba($white, 1);
@@ -318,21 +320,13 @@
     display: block;
   }
 
+  @media screen and (min-width: $tablet-3 + 1) {
+    max-width: 400px;
+  }
+
   @media screen and (max-width: $tablet-3) {
     height: calc(100vh - 56px);
   }
-  //   position: fixed;
-  //   top: 0px;
-  //   right: 0px;
-  //   bottom: 0px;
-  //   left: 0px;
-  //   max-width: 100%;
-  //   max-height: none;
-  //   padding-top: 57px;
-  //   height: 100vh;
-  //   color: rgba($white, 1);
-  //   background-color: #f7f7f7;
-  // }
 }
 
 .voog-search-modal-results {
